# avalign

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
avalign/: __init__.py  config.py
avalign/audio/: __init__.py  augment.py  io.py  melscale.py  melspec.py
avalign/cli/: __init__.py  embed.py  eval.py  main.py  prep.py  train.py
avalign/data/: __init__.py  manifest.py  sampler.py
avalign/losses/: __init__.py  functional.py  info_nce.py
avalign/metrics/: __init__.py  alignment.py  retrieval.py
avalign/torchext/: __init__.py  encoders.py  loss.py  model.py  trainer.py
avalign/utils/: __init__.py  log.py  seed.py
avalign/video/: __init__.py  sampling.py  transforms.py
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/: 01_logmel_specaugment.py  02_retrieval_eval.py  README.md
tests/: test_alignment.py  test_augment.py  test_cli.py  test_config.py  test_functional.py  test_import.py  test_info_nce.py  test_manifest.py  test_melspec.py  test_retrieval.py  test_sampler.py  test_video.py
tests/torchext/: test_loss.py  test_model.py  test_trainer.py
