[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avalign"
version = "0.0.1"
description = "Contrastive audio-video alignment toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Jenna Wang" }]
dependencies = ["numpy>=1.23"]

[tool.hatch.build.targets.wheel]
packages = ["avalign"]
